--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,7 @@
   display: flex;
   margin-bottom: 25px;
   align-items: center;
+  justify-content: space-between;
 }
 
 .toDo__list .toDo__item:first-child {
@@ -73,7 +74,7 @@
   gap: 16px;
 }
 .toDo__item-check {
-  width: 20px;
+  width: 16px;
   height: 16px;
   accent-color: #7749f8;
   &:checked ~ .toDo__item-text {
@@ -86,34 +87,33 @@
 }
 
 .toDo__item-text {
-  color: red;
-  margin: 0 16px;
   padding: 0 10px;
   color: #54595e;
   font-family: Inter;
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
-  width: 100%;
+  width: 407px;
 }
 .toDo__item-text-none {
   display: none;
 }
 .toDo__form-edit {
+  gap: 5px;
   display: flex;
   align-items: center;
 }
 
 .toDo__input-text {
-  margin: 0 16px;
   padding: 0 10px;
-  height: 38px;
+  height: 30px;
   color: #54595e;
   font-family: Inter;
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
   width: 400px;
+  margin-left: -10px;
 }
 .toDo__input-text-none {
   display: none;
@@ -129,7 +129,6 @@
   display: none;
 }
 .toDo__check-edit {
-  margin-right: 20px;
   width: 16px;
   height: 21px;
 }
