--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
-  width: 407px;
+  width: 100%;
 }
 
 .toDo__item-text-none {
@@ -166,9 +166,16 @@ p {
   gap: 5px;
   display: flex;
   align-items: center;
+  justify-content: end;
+  width: 100%;
+}
+
+.toDo__form-edit-none {
+  display: none;
 }
 
 .toDo__input-text {
+  margin-left: 5px;
   padding: 0 10px;
   height: 30px;
   color: #54595e;
@@ -176,8 +183,7 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
-  width: 400px;
-  margin-left: -10px;
+  width: 90%;
 }
 
 .toDo__input-text-none {
@@ -185,9 +191,7 @@ p {
 }
 
 .toDo__button-edit {
-  margin-right: 20px;
-  width: 16px;
-  height: 21px;
+  margin-right: 15px;
 }
 
 .toDo__button-edit-done {
@@ -195,8 +199,7 @@ p {
 }
 
 .toDo__check-edit {
-  width: 16px;
-  height: 21px;
+  margin-right: 15px;
 }
 
 .toDo__check-edit-done {
